// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Tag renders RTL styling if provided 1`] = `
<div
  className="c-tag is-rtl "
  data-garden-id="tags.tag_view"
  data-garden-version="version"
/>
`;

exports[`Tag renders default styling 1`] = `
<div
  className="c-tag "
  data-garden-id="tags.tag_view"
  data-garden-version="version"
/>
`;

exports[`Tag renders pill styling if provided 1`] = `
<div
  className="c-tag c-tag--pill "
  data-garden-id="tags.tag_view"
  data-garden-version="version"
/>
`;

exports[`Tag size renders large styling if provided 1`] = `
<div
  className="c-tag c-tag--lg "
  data-garden-id="tags.tag_view"
  data-garden-version="version"
  size="large"
/>
`;

exports[`Tag size renders small styling if provided 1`] = `
<div
  className="c-tag c-tag--sm "
  data-garden-id="tags.tag_view"
  data-garden-version="version"
  size="small"
/>
`;

exports[`Tag state renders focused styling if provided 1`] = `
<div
  className="c-tag is-focused "
  data-garden-id="tags.tag_view"
  data-garden-version="version"
/>
`;

exports[`Tag state renders hovered styling if provided 1`] = `
<div
  className="c-tag is-hovered "
  data-garden-id="tags.tag_view"
  data-garden-version="version"
/>
`;

exports[`Tag visual types renders blue styling if provided 1`] = `
<div
  className="c-tag c-tag--blue "
  data-garden-id="tags.tag_view"
  data-garden-version="version"
  type="blue"
/>
`;

exports[`Tag visual types renders green styling if provided 1`] = `
<div
  className="c-tag c-tag--green "
  data-garden-id="tags.tag_view"
  data-garden-version="version"
  type="green"
/>
`;

exports[`Tag visual types renders grey styling if provided 1`] = `
<div
  className="c-tag c-tag--grey "
  data-garden-id="tags.tag_view"
  data-garden-version="version"
  type="grey"
/>
`;

exports[`Tag visual types renders kale styling if provided 1`] = `
<div
  className="c-tag c-tag--kale "
  data-garden-id="tags.tag_view"
  data-garden-version="version"
  type="kale"
/>
`;

exports[`Tag visual types renders red styling if provided 1`] = `
<div
  className="c-tag c-tag--red "
  data-garden-id="tags.tag_view"
  data-garden-version="version"
  type="red"
/>
`;

exports[`Tag visual types renders yellow styling if provided 1`] = `
<div
  className="c-tag c-tag--yellow "
  data-garden-id="tags.tag_view"
  data-garden-version="version"
  type="yellow"
/>
`;
